--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,7 @@
 
 <body>
     <%-body%>
-    <!-- <script src="//code.tidio.co/qmrl1upywolofkyh8ddqxzg2938h1u2c.js" async></script> -->
+    <script src="//code.tidio.co/pcs2mrgka3nutpyechwmhjxiuvmhw17a.js" async></script>
 <!-- Begin of Chaport Live Chat code -->
 <script type="text/javascript">
     (function(w,d,v3){
